--- a/flask_server/templates/index.html
+++ b/flask_server/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Flask Home Page with Message</title>
   <link rel="stylesheet" href="/static/style.css">
-  <!-- why not use  Bootsrap for some pretty styles -->
+  <!-- import Bootsrap for some pretty styles -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
@@ -36,7 +36,7 @@
       <button id='btnGetData'>Go</button>
 
       <p>Or pick a default time period:
-        <button id='btnLastDay'>Last Data (17th March</button>
+        <button id='btnLastDay'>Last Data (17th March)</button>
         <button id='btnLastHour'>Last Hour</button>
         <button id='btnLast5Mins'>Last 5 minutes</button>
         <button id='btnLastAlert'>(Last Alert)</button>
@@ -53,6 +53,7 @@
     <section id='historical-chart'></section>
   </div>
 </body>
+
 <script src="/static/scripts.js"></script>
 <script>
   
