--- a/architecture/templates/live.html
+++ b/architecture/templates/live.html
@@ -1,107 +1,132 @@
-<!DOCTYPE HTML><html>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://code.highcharts.com/8.0/highcharts.js"></script>
-        <style>
-    body {
-    min-width: 300px;
-    max-width: 800px;
-    height: 400px;
-    margin: 0 auto;
-    }
-    h2 {
-    font-family: Arial;
-    font-size: 2.5rem;
-    text-align: center;
-    }
-    </style>
-    </head>
-    <body>
+<!DOCTYPE HTML>
+<html>
+
+<head>
+    <title>ESP Project - Live data stream</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.highcharts.com/8.0/highcharts.js"></script>
+    <!-- <style>
+        body {
+            min-width: 300px;
+            max-width: 800px;
+            height: 400px;
+            margin: 0 auto;
+        }
+
+        h2 {
+            font-family: Arial;
+            font-size: 2.5rem;
+            text-align: center;
+        }
+    </style> -->
+    <!-- import Bootsrap for some pretty styles -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+</head>
+
+<body>
+    <!-- Bootstrap 'container' makes everything nicely centred on the page -->
+    <div class="container">
         <nav>
             <a href='/'>Home</a> |
-            <a href='/live'>Live</a>
-          </nav>
-    <!-- heading at the top of the chrome page -->
-        <h2>ESP32 Movement monitoring</h2> 
-    <!-- graphic with unique -->
+            <a href='/live'>Live</a> |
+            <a href='/samples'>Samples</a> |
+            <a href='/alert?start_dt=0&end_dt=1&area_under=0'>Alert</a>
+        </nav>
+        <aside>
+            <button id='btnPatientA'>Patient A</button>
+            <button disabled id='btnPatientB'>Patient B</button>
+            <button disabled id='btnPatientC'>Patient C</button>
+            <button disabled id='btnPatientD'>Patient D</button>
+        </aside>
+        <!-- heading at the top of the chrome page -->
+        <h2>ESP32 Movement monitoring</h2>
+        <!-- graphic with unique -->
         <div id="movement-chart" class="container"></div>
-    </body>
-    <script>
-        let chartT = new Highcharts.Chart({
-            chart:{ renderTo : 'movement-chart' },
-            title: { text: 'Change in FSR data' },
-            series: [{
-                name:'Sensor 1',
-                showInLegend: false,
-                data: []
-             }
-            ,{
-                name:'Sensor 2',
-                showInLegend: false,
-                data: []
-            },
-            {
-                name:'Sensor 3',
-                showInLegend: false,
-                data: []
-            },
-            {
-                name:'Sensor 4',
-                showInLegend: false,
-                data: []
-            },
-            {
-                name:'Sensor 5',
-                showInLegend: false,
-                data: []
-            }
-            ],
-            plotOptions: {
-                line: { animation: false,
+    </div>
+</body>
+<script>
+    let chartT = new Highcharts.Chart({
+        chart: { renderTo: 'movement-chart' },
+        title: { text: 'Change in FSR data' },
+        series: [{
+            name: 'Sensor 1',
+            showInLegend: false,
+            data: []
+        }
+            , {
+            name: 'Sensor 2',
+            showInLegend: false,
+            data: []
+        },
+        {
+            name: 'Sensor 3',
+            showInLegend: false,
+            data: []
+        },
+        {
+            name: 'Sensor 4',
+            showInLegend: false,
+            data: []
+        },
+        {
+            name: 'Sensor 5',
+            showInLegend: false,
+            data: []
+        }
+        ],
+        plotOptions: {
+            line: {
+                animation: false,
                 dataLabels: { enabled: true }
-                },
-                // series: { color: '#059e8a' }
-                // series: { colors: ['#059e8a', '#c0ffee', '#c0ac0a', '#f9933', '#3399ff'] } // color each line differently
             },
-            xAxis: { type: 'datetime',
-                dateTimeLabelFormats: { second: '%H:%M:%S' }
-            },
-            yAxis: {
-                
-            },
-            credits: { enabled: false }
-        });
-        setInterval( ()=>{ // replaced old-skool 'function' with modern ()=>{} syntax)
-            fetch('http://192.168.0.20/movement')
-                    .then(response => response.text()) // convert the data from JSON
-                    .then(
-                        // when the data comes back, put in into the page
-                        (data) => {
-                            data_arr=data.split('-')
-                            console.log(data_arr[0],data_arr[1])
-                            let x = (new Date()).getTime(),
-                            y0 = parseFloat(data_arr[0]);
-                            y1 = parseFloat(data_arr[1]);
-                            y2 = parseFloat(data_arr[2]);
-                            y3 = parseFloat(data_arr[3]);
-                            y4 = parseFloat(data_arr[4]);
-                            if(chartT.series[0].data.length > 50) {
-                                chartT.series[0].addPoint([x, y0], true, true, true);
-                                chartT.series[1].addPoint([x, y1], true, true, true);
-                                chartT.series[2].addPoint([x, y2], true, true, true);
-                                chartT.series[3].addPoint([x, y3], true, true, true);
-                                chartT.series[4].addPoint([x, y4], true, true, true);
-                            } else {
-                                chartT.series[0].addPoint([x, y0], true, false, true);
-                                chartT.series[1].addPoint([x, y1], true, false, true);
-                                chartT.series[2].addPoint([x, y2], true, false, true);
-                                chartT.series[3].addPoint([x, y3], true, false, true);
-                                chartT.series[4].addPoint([x, y4], true, false, true);
-                            }
-                        })
-        }, 1000 ) ;
-    
-    </script> 
-    </html>
+            // series: { color: '#059e8a' }
+            // series: { colors: ['#059e8a', '#c0ffee', '#c0ac0a', '#f9933', '#3399ff'] } // color each line differently
+        },
+        xAxis: {
+            type: 'datetime',
+            dateTimeLabelFormats: { second: '%H:%M:%S' }
+        },
+        yAxis: {
+
+        },
+        credits: { enabled: false }
+    });
+    setInterval(() => { // replaced old-skool 'function' with modern ()=>{} syntax)
+        fetch('http://192.168.0.40/movement')
+            .then(response => response.text()) // convert the data from JSON
+            .then(
+                // when the data comes back, put in into the page
+                (data) => {
+                    data_arr = data.split('-')
+                    console.log(data_arr[0], data_arr[1])
+                    let x = (new Date()).getTime(),
+                        y0 = parseFloat(data_arr[0]);
+                    y1 = parseFloat(data_arr[1]);
+                    y2 = parseFloat(data_arr[2]);
+                    y3 = parseFloat(data_arr[3]);
+                    y4 = parseFloat(data_arr[4]);
+                    if (chartT.series[0].data.length > 50) {
+                        chartT.series[0].addPoint([x, y0], true, true, true);
+                        chartT.series[1].addPoint([x, y1], true, true, true);
+                        chartT.series[2].addPoint([x, y2], true, true, true);
+                        chartT.series[3].addPoint([x, y3], true, true, true);
+                        chartT.series[4].addPoint([x, y4], true, true, true);
+                    } else {
+                        chartT.series[0].addPoint([x, y0], true, false, true);
+                        chartT.series[1].addPoint([x, y1], true, false, true);
+                        chartT.series[2].addPoint([x, y2], true, false, true);
+                        chartT.series[3].addPoint([x, y3], true, false, true);
+                        chartT.series[4].addPoint([x, y4], true, false, true);
+                    }
+                })
+    }, 1000);
+
+</script>
+
+</html>
