--- a/architecture/templates/index.html
+++ b/architecture/templates/index.html
@@ -58,9 +58,12 @@
     <hr/>
     <!-- we need somewhere for the chart to go -->
     <section id='historical-chart'></section>
+    <!-- bootstrap-styled switch -->
+    <aside class="form-check form-switch">
+      <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+      <label class="form-check-label" for="flexSwitchCheckDefault">Show Original Data</label>
+    </aside>
   </div>
 </body>
-
 <script src="/static/scripts.js"></script>
-
 </html>
