--- a/architecture/templates/samples.html
+++ b/architecture/templates/samples.html
@@ -1,6 +1,4 @@
-<!-- templates/index.html -->
 <html>
-
 <head>
     <title>ESP Project - Sample Datasets</title>
     <link rel="stylesheet" href="/static/style.css">
@@ -14,8 +12,8 @@
     <script src='/static/luxon.js'></script>
     <!-- we will need the highcharts library to plot charts -->
     <script src="https://code.highcharts.com/8.0/highcharts.js"></script>
-    
-  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 
 <body>
@@ -35,16 +33,20 @@
             <button id='btnEleven'>Eleven seizure emulations</button>
             <button id='btnPilot'>17th March data</button>
         </section>
+        <section>
+            <pre id='monitor'></pre>
+        </section>
         <hr />
         <!-- we need somewhere for the chart to go -->
         <section id='sample-chart'></section>
+        <!-- bootstrap-styled switch -->
+        <aside class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">Show Original Data</label>
+        </aside>
     </div>
 </body>
-
 <script src="/static/samples.js"></script>
 <script>
-
-
 </script>
-
 </html>
